# findo-search-engine

./: .gitignore  README.md
application/: pyproject.toml
application/evaluation/: model_testing.py  ndcg.txt  rerank_results.txt  time_test.py  times.txt  trec_dl19_ndcg.py
application/src/findo/: __init__.py
application/src/findo/core/: limit_memory.py  model.py
application/src/findo/entrypoints/: answer_generation.py  asgi.py  cli.py  database_creation.py  indexer.py  neural_reranker.py  query_corrector.py  searcher.py  summarizer.py  tokenizer.py
application/src/findo/entrypoints/api/: app.py  model.py
application/src/findo/entrypoints/api/routes/: search.py
application/static_pages/: index.html
